<resources>
    <string name="app_name" translatable="false">QuizApp</string>
    <string name="questions_count" translatable="false">%d/%d</string>
    <string name="questions_time" translatable="false">%d:%d</string>
    <string name="new_game">New game</string>
    <string name="create_quiz">Create quiz</string>
    <string name="start">Start</string>
    <string name="choose_topic">Choose a topic</string>
    <string name="confirm">Confirm</string>
    <string name="answerA">A: %s</string>
    <string name="answerB">B: %s</string>
    <string name="answerC">C: %s</string>
    <string name="answerD">D: %s</string>
    <string name="results">Results</string>
    <string name="results_time">Time: %02d:%02d</string>
    <string name="correct_answers">Answers: %d/%d</string>
    <string name="to_main_screen">Go to main screen</string>
    <string name="try_again">Try again</string>
    <string name="share_results">Share results</string>
    <string name="full_image">Full guestion image</string>
    <string name="you_shure">Are you sure you want to leave the game?\nAll progress will be lost.</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="share_results_with">Share with:</string>
    <string name="text_for_share">I scored %d out of %d points in the QuizApp.\nHow much can you get?</string>
    <string name="view_results">View Results</string>
    <string name="quiz_app_logo">QuizApp Logo</string>
    <string name="warning">Warning</string>

</resources>