<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ResultsFragment">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/results"
        android:textSize="@dimen/h2TextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/results_time"
        android:textSize="@dimen/h2TextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answers_text_view"
        app:layout_constraintTop_toBottomOf="@id/title_text_view"/>

    <TextView
        android:id="@+id/answers_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/correct_answers"
        android:textSize="@dimen/h2TextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_text_view" />

    <Button
        android:id="@+id/view_results_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:lines="1"
        android:text="@string/view_results"
        android:textSize="@dimen/resultButtonTextSize"
        app:layout_constraintTop_toBottomOf="@id/answers_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/share_results_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:lines="1"
        android:text="@string/share_results"
        android:textSize="@dimen/resultButtonTextSize"
        app:layout_constraintBottom_toTopOf="@id/try_again_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:lines="1"
        android:text="@string/try_again"
        android:textSize="@dimen/resultButtonTextSize"
        app:layout_constraintBottom_toTopOf="@id/to_main_screen_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/to_main_screen_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/to_main_screen"
        android:textSize="@dimen/resultButtonTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>