<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.MainScreenFragment">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="40dp"
        android:src="@drawable/head_img"
        android:contentDescription="@string/quiz_app_logo" />

    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textSize="@dimen/h1TextSize"
        android:fontFamily="@font/intro"
        style="@style/Widget.QuizApp.TitleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image_view" />

    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_game"
        android:textSize="@dimen/mainScreenButtonsTextSize"
        android:fontFamily="@font/intro"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view" />

    <Button
        android:id="@+id/create_topic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_quiz"
        android:textSize="@dimen/mainScreenButtonsTextSize"
        android:fontFamily="@font/intro"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        app:layout_constraintTop_toBottomOf="@id/new_game_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/homer_image_view"
        app:layout_constraintTop_toBottomOf="@id/create_topic_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHorizontal_bias="0.8"
        android:importantForAccessibility="no"/>



</androidx.constraintlayout.widget.ConstraintLayout>